# Project-SkyPro

./: pyproject.toml  settings.py
data/: operations.json
src/: data_file.py  decorators.py  generators.py  log.py  masks.py  operations.py  processing.py  read_data.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_read_data.py  test_utils.py  test_widget.py
