[tool.poetry]
name = "python-hm-1"
version = "0.1.0"
description = ""
authors = ["Alexei Kasaev <kasaev_97@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"
black = "^23.10.1"
isort = "^5.12.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
